--- a/00-quick-start/pom.xml
+++ b/00-quick-start/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.example.langchain4j.azure</groupId>
-    <artifactId>langchain4j-for-beginners-azure</artifactId>
+    <groupId>com.example.langchain4j</groupId>
+    <artifactId>langchain4j-for-beginners</artifactId>
     <version>1.0.0</version>
   </parent>
 
-  <groupId>com.example.langchain4j.azure</groupId>
+  <groupId>com.example.langchain4j</groupId>
   <artifactId>langchain4j-quickstart</artifactId>
   <version>1.0.0</version>
   <name>00-quick-start</name>
