--- a/04-tools/pom.xml
+++ b/04-tools/pom.xml
@@ -6,8 +6,8 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>com.example.langchain4j.azure</groupId>
-        <artifactId>langchain4j-for-beginners-azure</artifactId>
+        <groupId>com.example.langchain4j</groupId>
+        <artifactId>langchain4j-for-beginners</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
