--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
                              https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example.langchain4j.azure</groupId>
-  <artifactId>langchain4j-for-beginners-azure</artifactId>
+  <groupId>com.example.langchain4j</groupId>
+  <artifactId>langchain4j-for-beginners</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
 
