Add githubcopilot.md to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ LangChain4j_Diagrams_Pack.docx
 
 # Image Generation Guide (contains API key instructions)
 IMAGE_GENERATION_GUIDE.md
+githubcopilot.md
