--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
         "vscjava.vscode-java-pack",
         "vscjava.vscode-spring-initializr",
         "vscjava.vscode-spring-boot-dashboard",
-        "github.copilot"
+        "github.copilot",
+        "github.copilot-chat"
       ],
       "settings": {
         "java.configuration.updateBuildConfiguration": "automatic",
