Remove Docker socket mounts and privileged settings from devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,9 +49,5 @@
     "JAVA_HOME": "/usr/lib/jvm/msopenjdk-current",
     "MAVEN_OPTS": "-Xmx2g"
   },
-  "forwardPorts": [8080, 8081, 8082, 8083, 3001],
-  "mounts": [
-    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
-  ],
-  "privileged": true
+  "forwardPorts": [8080, 8081, 8082, 8083, 3001]
 }
