--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Java Development Environment",
+  "name": "LangChain4j Java Development Environment",
   "image": "mcr.microsoft.com/devcontainers/java:21",
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
@@ -43,7 +43,7 @@
       }
     }
   },
-  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y maven && git config --global core.autocrlf input && git config --global core.eol lf",
+  "postCreateCommand": "bash .devcontainer/post-create.sh",
   "remoteUser": "vscode",
   "containerEnv": {
     "JAVA_HOME": "/usr/lib/jvm/msopenjdk-current",
