--- a/04-tools/pom.xml
+++ b/04-tools/pom.xml
@@ -68,6 +68,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.langchain4j.agents.AgentsApplication</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
