--- a/03-rag/src/main/resources/application.yaml
+++ b/03-rag/src/main/resources/application.yaml
@@ -31,6 +31,16 @@ rag:
   max-results: 5
   min-score: 0.7
 
+# Spring Boot Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
 # Logging
 logging:
   level:
