--- a/01-introduction/pom.xml
+++ b/01-introduction/pom.xml
@@ -18,6 +18,12 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <!-- Spring Boot Actuator for health checks and monitoring -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
     <!-- Core LangChain4j components -->
     <dependency>
       <groupId>dev.langchain4j</groupId>
