--- a/01-introduction/src/main/resources/application.yaml
+++ b/01-introduction/src/main/resources/application.yaml
@@ -15,6 +15,16 @@ azure:
     reasoning-effort: medium  # low, medium, high (for GPT-5)
     max-tokens: 1000
 
+# Spring Boot Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
 # Logging configuration
 logging:
   level:
