--- a/02-prompt-engineering/pom.xml
+++ b/02-prompt-engineering/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <!-- Spring Boot Actuator for health checks and monitoring -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
     <!-- Thymeleaf for UI templates -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
