Add launch configurations for various demos and create tasks for MCP server and Docker image build

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,80 @@
 {
     "configurations": [
-        // 01-introduction
+        {
+            "type": "java",
+            "name": "ToolIntegrationDemo",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.quickstart.ToolIntegrationDemo",
+            "projectName": "langchain4j-quickstart"
+        },
+        {
+            "type": "java",
+            "name": "SimpleReaderDemo",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.quickstart.SimpleReaderDemo",
+            "projectName": "langchain4j-quickstart"
+        },
+        {
+            "type": "java",
+            "name": "PromptEngineeringDemo",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.quickstart.PromptEngineeringDemo",
+            "projectName": "langchain4j-quickstart"
+        },
+        {
+            "type": "java",
+            "name": "BasicChatDemo",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.quickstart.BasicChatDemo",
+            "projectName": "langchain4j-quickstart"
+        },
+        {
+            "type": "java",
+            "name": "MCP: Stdio Transport Demo",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/05-mcp",
+            "mainClass": "com.example.langchain4j.mcp.StdioTransportDemo",
+            "projectName": "mcp-example",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "MCP: Streamable HTTP Demo",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/05-mcp",
+            "mainClass": "com.example.langchain4j.mcp.StreamableHttpDemo",
+            "projectName": "mcp-example",
+            "envFile": "${workspaceFolder}/.env",
+            "preLaunchTask": "Start MCP Everything Server"
+        },
+        {
+            "type": "java",
+            "name": "MCP: Streamable HTTP Demo (Manual Server)",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/05-mcp",
+            "mainClass": "com.example.langchain4j.mcp.StreamableHttpDemo",
+            "projectName": "mcp-example",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "MCP: Git Repository Analyzer (Docker)",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/05-mcp",
+            "mainClass": "com.example.langchain4j.mcp.GitRepositoryAnalyzer",
+            "projectName": "mcp-example",
+            "envFile": "${workspaceFolder}/.env",
+            "preLaunchTask": "Build MCP Git Docker Image"
+        },
+        {
+            "type": "java",
+            "name": "MCP: Git Repository Analyzer (Manual Docker)",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/05-mcp",
+            "mainClass": "com.example.langchain4j.mcp.GitRepositoryAnalyzer",
+            "projectName": "mcp-example",
+            "envFile": "${workspaceFolder}/.env"
+        },
         {
             "type": "java",
             "name": "Spring Boot: Introduction",
@@ -11,7 +85,6 @@
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         },
-        // 02-prompt-engineering
         {
             "type": "java",
             "name": "Spring Boot: Prompt Engineering",
@@ -22,7 +95,6 @@
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         },
-        // 03-rag
         {
             "type": "java",
             "name": "Spring Boot: RAG",
@@ -33,7 +105,6 @@
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         },
-        // 04-tools
         {
             "type": "java",
             "name": "Spring Boot: Agents & Tools",
@@ -44,7 +115,6 @@
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         },
-        // 05-mcp
         {
             "type": "java",
             "name": "MCP: Streamable HTTP Demo",
