--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ AZURE_OPENAI_ENDPOINT="https://<your-resource>.openai.azure.com/"
 AZURE_OPENAI_API_KEY="<paste-key-here>"
 AZURE_OPENAI_DEPLOYMENT="gpt-5"
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT="text-embedding-3-small"
+GITHUB_TOKEN="<paste-token-here>"
