--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- LangChain4j dependency versions -->
+      <dependency>
+        <groupId>dev.langchain4j</groupId>
+        <artifactId>langchain4j-bom</artifactId>
+        <version>${langchain4j.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      
       <!-- Import Spring Boot dependency versions -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
