Refactor AgentService to use LangChain4j AiServices for tool orchestration; remove manual HTTP calls and parsing logic. Update README.md to clarify execution process and add rationale for using AiServices. Delete ToolsController as it's no longer needed. Simplify application.yaml by removing obsolete configuration.

--- a/04-tools/src/main/resources/application.yaml
+++ b/04-tools/src/main/resources/application.yaml
@@ -9,16 +9,12 @@ server:
   error:
     include-message: always
 
-# Azure OpenAI and Agent configuration
+# Azure OpenAI configuration
 azure:
   openai:
     endpoint: ${AZURE_OPENAI_ENDPOINT:}
     api-key: ${AZURE_OPENAI_API_KEY:}
     deployment: ${AZURE_OPENAI_DEPLOYMENT:}
-  ai:
-    agent:
-      tools:
-        base-url: ${TOOLS_BASE_URL:http://localhost:8084}
 
 # Spring Boot Actuator
 management:
