--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
             <source>${java.version}</source>
             <target>${java.version}</target>
             <release>${java.version}</release>
+            <parameters>true</parameters>
           </configuration>
         </plugin>
         <plugin>
