Refactor to use OpenAiOfficialChatModel across all modules
- Updated imports and references from OpenAiChatModel to OpenAiOfficialChatModel in PromptEngineeringDemo, SimpleReaderDemo, ToolIntegrationDemo, and related test classes.
- Changed dependency in pom.xml files to langchain4j-open-ai-official for unified OpenAI and Azure OpenAI support.
- Modified configuration classes to set up OpenAiOfficialChatModel and OpenAiOfficialEmbeddingModel.
- Adjusted README and documentation to reflect changes in model usage and configuration.
- Ensured all instances of AzureOpenAiChatModel are replaced with OpenAiOfficialChatModel for consistency.

--- a/00-quick-start/pom.xml
+++ b/00-quick-start/pom.xml
@@ -26,7 +26,7 @@
     <!-- OpenAI Integration (GitHub Models uses OpenAI-compatible API) -->
     <dependency>
       <groupId>dev.langchain4j</groupId>
-      <artifactId>langchain4j-open-ai</artifactId>
+      <artifactId>langchain4j-open-ai-official</artifactId>
     </dependency>
 
     <!-- SLF4J Simple Logger (for logging) -->
