--- a/05-mcp/pom.xml
+++ b/05-mcp/pom.xml
@@ -26,10 +26,10 @@
             <version>${langchain4j.mcp.version}</version>
         </dependency>
 
-        <!-- OpenAI Integration -->
+        <!-- OpenAI Official Integration -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-open-ai</artifactId>
+            <artifactId>langchain4j-open-ai-official</artifactId>
         </dependency>
 
         <!-- JUnit for testing -->
