Enhance AI agent implementation with declarative services and Spring Boot integration

--- a/04-tools/pom.xml
+++ b/04-tools/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>langchain4j</artifactId>
         </dependency>
 
+        <!-- LangChain4j Spring Boot Starter -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- JSON binding -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
