--- a/01-introduction/azure.yaml
+++ b/01-introduction/azure.yaml
@@ -12,10 +12,19 @@ infra:
 
 hooks:
   postprovision:
-    shell: sh
-    run: |
-      echo "Generating .env file from azd environment..."
-      cd ..
-      bash .azd-env.sh
-    continueOnError: false
-    interactive: false
+    windows:
+      shell: pwsh
+      run: |
+        Write-Host "Generating .env file from azd environment..."
+        Set-Location ..
+        . .\.azd-env.ps1
+      continueOnError: false
+      interactive: false
+    posix:
+      shell: sh
+      run: |
+        echo "Generating .env file from azd environment..."
+        cd ..
+        bash .azd-env.sh
+      continueOnError: false
+      interactive: false
