--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,17 @@
     <!-- Use Java 21 by default.  Override by setting the
          JAVA_HOME environment variable or the `java.version` property -->
     <java.version>21</java.version>
-    <spring.boot.version>3.3.4</spring.boot.version>
+    <spring.boot.version>3.5.8</spring.boot.version>
     <!-- Set the LangChain4j version to a recent stable release -->
     <langchain4j.version>1.9.0</langchain4j.version>
     <!-- MCP support requires beta version -->
     <langchain4j.mcp.version>1.9.0-beta16</langchain4j.mcp.version>
-    <!-- Test dependency versions -->
-    <junit.version>5.10.0</junit.version>
+    <!-- Test dependency versions - JUnit version managed by Spring Boot BOM -->
     <assertj.version>3.25.3</assertj.version>
     <testcontainers.version>2.0.2</testcontainers.version>
-    <!-- Logging versions -->
-    <slf4j.version>2.0.9</slf4j.version>
-    <logback.version>1.5.12</logback.version>
+    <!-- Logging versions - aligned with Spring Boot 3.5.0 -->
+    <slf4j.version>2.0.17</slf4j.version>
+    <logback.version>1.5.18</logback.version>
     <!-- Other dependency versions -->
     <pdfbox.version>2.0.31</pdfbox.version>
     <!-- Maven plugin versions -->
@@ -65,19 +64,7 @@
         <scope>import</scope>
       </dependency>
       
-      <!-- Testing dependencies -->
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
+      <!-- Testing dependencies - JUnit managed by Spring Boot BOM -->
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
@@ -97,7 +84,7 @@
         <scope>test</scope>
       </dependency>
       
-      <!-- Logging dependencies -->
+      <!-- Logging dependencies - aligned with Spring Boot 3.5.0 -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
