Update Spring Boot version to 4.0.0; add WebMvc test support and refactor RagControllerTest to use JsonMapper

--- a/03-rag/pom.xml
+++ b/03-rag/pom.xml
@@ -60,6 +60,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <!-- WebMvc test support for @WebMvcTest (Spring Boot 4.0) -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webmvc-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
