Remove redundant envFile entries from launch configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,32 +5,28 @@
             "name": "ToolIntegrationDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.quickstart.ToolIntegrationDemo",
-            "projectName": "langchain4j-quickstart",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "langchain4j-quickstart"
         },
         {
             "type": "java",
             "name": "SimpleReaderDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.quickstart.SimpleReaderDemo",
-            "projectName": "langchain4j-quickstart",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "langchain4j-quickstart"
         },
         {
             "type": "java",
             "name": "PromptEngineeringDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.quickstart.PromptEngineeringDemo",
-            "projectName": "langchain4j-quickstart",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "langchain4j-quickstart"
         },
         {
             "type": "java",
             "name": "BasicChatDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.quickstart.BasicChatDemo",
-            "projectName": "langchain4j-quickstart",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "langchain4j-quickstart"
         },
         {
             "type": "java",
@@ -38,8 +34,7 @@
             "request": "launch",
             "cwd": "${workspaceFolder}/05-mcp",
             "mainClass": "com.example.langchain4j.mcp.StdioTransportDemo",
-            "projectName": "mcp-example",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "mcp-example"
         },
         {
             "type": "java",
@@ -48,7 +43,6 @@
             "cwd": "${workspaceFolder}/05-mcp",
             "mainClass": "com.example.langchain4j.mcp.StreamableHttpDemo",
             "projectName": "mcp-example",
-            "envFile": "${workspaceFolder}/.env",
             "preLaunchTask": "Start MCP Everything Server"
         },
         {
@@ -58,7 +52,6 @@
             "cwd": "${workspaceFolder}/05-mcp",
             "mainClass": "com.example.langchain4j.mcp.GitRepositoryAnalyzer",
             "projectName": "mcp-example",
-            "envFile": "${workspaceFolder}/.env",
             "preLaunchTask": "Build MCP Git Docker Image"
         },
         {
@@ -67,8 +60,7 @@
             "request": "launch",
             "cwd": "${workspaceFolder}/05-mcp",
             "mainClass": "com.example.langchain4j.mcp.GitRepositoryAnalyzer",
-            "projectName": "mcp-example",
-            "envFile": "${workspaceFolder}/.env"
+            "projectName": "mcp-example"
         },
         {
             "type": "java",
