refactor: update file paths and enhance MCP client initialization with resource management

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "command": "node",
             "args": [
-                "dist/streamableHttp.js"
+                "dist/transports/streamableHttp.js"
             ],
             "options": {
                 "cwd": "${workspaceFolder}/../servers/src/everything"
