feat: add MCP Agent demo and integrate agentic module for enhanced workflows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "McpAgentDemo",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.mcp.McpAgentDemo",
+            "projectName": "mcp-example"
+        },
+        {
+            "type": "java",
             "name": "ToolIntegrationDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.quickstart.ToolIntegrationDemo",
