--- a/05-mcp/pom.xml
+++ b/05-mcp/pom.xml
@@ -26,6 +26,13 @@
             <version>${langchain4j.mcp.version}</version>
         </dependency>
 
+        <!-- LangChain4j Agentic Module for Agent Workflows -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-agentic</artifactId>
+            <version>${langchain4j.mcp.version}</version>
+        </dependency>
+
         <!-- OpenAI Official Integration -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
