--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ResponsibleGithubModels",
+            "request": "launch",
+            "mainClass": "com.example.langchain4j.quickstart.ResponsibleGithubModels",
+            "projectName": "langchain4j-quickstart",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
             "name": "SupervisorAgentDemo",
             "request": "launch",
             "mainClass": "com.example.langchain4j.mcp.SupervisorAgentDemo",
